# rusty_hyperliquid_ledger

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/hl-api/: Cargo.toml
crates/hl-api/src/: error.rs  handlers.rs  lib.rs  state.rs  types.rs
crates/hl-builder-data/: Cargo.toml
crates/hl-builder-data/src/: client.rs  enricher.rs  error.rs  lib.rs  parser.rs  types.rs
crates/hl-builder-data/tests/: integration_test.rs
crates/hl-indexer/: Cargo.toml
crates/hl-indexer/src/: converter.rs  error.rs  indexer.rs  leaderboard.rs  lib.rs  taint.rs
crates/hl-indexer/tests/: builder_test.rs
crates/hl-ingestion/: Cargo.toml
crates/hl-ingestion/examples/: fetch_data.rs  ws_collector.rs
crates/hl-ingestion/src/: api_client.rs  config.rs  error.rs  hyperliquid.rs  lib.rs  mock.rs  ws_collector.rs
crates/hl-ingestion/tests/: fetch_data.rs  ws_collector.rs
crates/hl-server/: Cargo.toml
crates/hl-server/src/: main.rs
crates/hl-types/: Cargo.toml
crates/hl-types/src/: asset.rs  error.rs  fill.rs  lib.rs  pnl.rs  position.rs
