[package]
name = "hl-builder-data"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Builder fill data fetcher and parser for Hyperliquid"

[dependencies]
# Internal crates
hl-types = { path = "../hl-types" }

# HTTP client
reqwest.workspace = true

# LZ4 decompression (pure Rust, no C dependency)
lz4_flex = "0.11"

# CSV parsing
csv = "1.3"

# Core dependencies
serde.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rust_decimal_macros = "1"
