[package]
name = "hl-ingestion"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Data ingestion layer for Hyperliquid APIs"

[dependencies]
hl-types = { path = "../hl-types" }

# Hyperliquid SDK - provides zero-cost async via impl Future pattern
hypersdk.workspace = true

# Core dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
dotenvy.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
