[package]
name = "hl-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared data structures for Hyperliquid Trade Ledger"

[dependencies]
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
rust_decimal_macros = "1"
